<resources>
    <string name="app_name">Environmental</string>
    <string name="enter_app">Enter</string>
    <string name="jump_guide">skip</string>
    <string name="search_text">Search</string>
    <string name="search_hint">Click to Search...</string>
    <string name="news">News</string>
    <string name="web_site_through">Web site through</string>
    <string name="ask_answer">Ask Answer</string>
    <string name="download">Download Files</string>
    <string name="activation_record">Activation Record</string>
    <string name="environmental_policies">Environmental Policies</string>
    <string name="a_prize_competition">A prize competition</string>
    <string name="science_highlights">Science highlights</string>
    <string name="funny_games">Funny Games</string>
    <string name="main_btn_shouye">Home</string>
    <string name="main_btn_mine">Mine</string>
    <!--getweather-->
    <string name="weather_error">Get Weather Info Failed!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_news">News</string>
    <string name="title_activity_web">Web Site</string>

    <string name="action_login">Login/Register</string>
    <string name="action_login_login">Login</string>
    <string name="action_login_register">Register</string>
    <string name="action_login_name">Username</string>
    <string name="action_login_password">Password</string>
    <string name="action_login_namehit">username or email</string>
    <string name="action_login_passwordhint">6-20 letters, numbers, and compliance</string>


    <string name="mine_download">download</string>
    <string name="mine_message">message</string>
    <string name="mine_comment">comment</string>
    <string name="mine_setting">setting</string>
    <string name="mine_moreapp">recommended application</string>
    <string name="mine_versionent">latest version</string>
    <string name="mine_collection">collection</string>
    <string name="mine_game">games</string>
    <string name="mine_weather">weather</string>
    <string name="mine_more">more</string>
    <string name="mine_about">about</string>
</resources>
