<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.environmental.lake.environmental.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/action_login_name"
            android:textSize="16dp" />

        <EditText
            android:textSize="16dp"
            android:hint="@string/action_login_namehit"
            android:id="@+id/et_login_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null" />
    </LinearLayout>
    <ImageView
        android:background="@color/color_deflate"
        android:layout_width="match_parent"
        android:layout_height="0.1dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/action_login_password"
            android:textSize="16dp" />

        <EditText
            android:textSize="16dp"
            android:hint="@string/action_login_passwordhint"
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/color_orange"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/action_login_login"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
