<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.environmental.lake.fragment.Fragment_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorWhite">

                <android.support.v4.view.ViewPager
                    android:id="@+id/main_viewpager_ad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v4.view.ViewPager>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/guide1"
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/img_ad_reclycle_selecte" />

                        <ImageView
                            android:id="@+id/guide2"
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/img_ad_reclycle_bg" />

                        <ImageView
                            android:id="@+id/guide3"
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/img_ad_reclycle_bg" />

                        <ImageView
                            android:id="@+id/guide4"
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/img_ad_reclycle_bg" />

                        <ImageView
                            android:id="@+id/guide5"
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:background="@drawable/img_ad_reclycle_bg" />
                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lnlay_news"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/news"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/Lnlay_web_site"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/web_site_through"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/Lnlay_ask_answer"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/ask_answer"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/Lnlay_download_files"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_s_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/download"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/Lnlay_activation_record"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_s_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/activation_record"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/Lnlay_envir_policies"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_s_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/environmental_policies"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/Lnlay_pirze_competition"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_t_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/a_prize_competition"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/Lnlay_science_highlights"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_t_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/science_highlights"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/Lnlay_funny_games"
                        android:clickable="true"
                        android:background="@drawable/btn_mian_guide_t_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_weight="1">
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:text="@string/funny_games"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <include
                layout="@layout/weather"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@null">

        <LinearLayout
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/search_text" />

            <LinearLayout
                android:id="@+id/LnLay_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/search_bg"
                android:clickable="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/search" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/search_hint" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</FrameLayout>

